--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <td><img src="Nisha.png" alt="Nisha Profile Picture"></td>
             <td><h1>Nisha Makwana</h1>
                 <p><em><strong><a href="https://www.taylorswift.com/">Salesforce Developer</a></strong> at TCS</em></p>
-                <p>I like music and I love making sketch , i wanna learn lightning and find a new job</p>
+                <p>I like music and I love making sketch , i'm experienced in salesforce development and configuration</p>
             </td>
         </tr>
     </table>
